<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarInspeccionFragment">

    <TextView
        android:id="@+id/tv_detalles_del_equipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/detalles_del_equipo"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar_marca"
        app:layout_constraintTop_toBottomOf="@+id/tv_detalles_del_equipo" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar_modelo"
        app:layout_constraintTop_toBottomOf="@+id/et_marca" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar_fecha"
        app:layout_constraintTop_toBottomOf="@+id/et_modelo" />

    <Button
        android:id="@+id/btn_agregar_inspeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <TextView
        android:id="@+id/tv_agregar_inspeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/agregar_inspeccion"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregar_inspeccion" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_check_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_guardar_inspeccion"
        app:layout_constraintTop_toBottomOf="@+id/tv_agregar_inspeccion" />

    <Button
        android:id="@+id/btn_guardar_inspeccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>